modify log_config; modify database access

--- a/LittlePHP/config/log_config.ini
+++ b/LittlePHP/config/log_config.ini
@@ -6,4 +6,4 @@ log4php.appender.default=LoggerAppenderDailyFile
 log4php.appender.default.file=../logs/%s.log
 log4php.appender.default.datePattern=Y-m-d
 log4php.appender.default.layout=LoggerLayoutPattern
-log4php.appender.default.layout.ConversionPattern="%d{Y-m-d H:m:s} [%p] %c: %m (at %F:%L)%n"
+log4php.appender.default.layout.ConversionPattern=%d [%p] %c: %m %n
